--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Titulo de la página</h1>
+        <h1>pagina web responsiva </h1>
     </header>
     <section class="section">
-        <div class="section-header">Pollo</div>
+        <div class="section-header">Pollo con res </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
+    </section>
+    <section class="section"> 
+        <div class="section-header">Carne de res con cerdo</div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
     </section>
     <section class="section">
-        <div class="section-header">Carne de res</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
-    </section>
-    <section class="section">
-        <div class="section-header">Sushi</div>
+        <div class="section-header">Sushi de platano </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
     </section>
 </body>
