--- a/index.html
+++ b/index.html
@@ -2,25 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive Web Page</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>pagina web responsiva </h1>
+        <h1>Menu Responsivo </h1>
+        
     </header>
-    <section class="section">
-        <div class="section-header">Pollo con res </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
+    <section class="column-lg-4 colmn-md-6 colmn-sm-12">
+        <div>
+            <p class="subt1">Chicken</p>
+            <p class="content">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+            </p>
+        </div>
     </section>
-    <section class="section"> 
-        <div class="section-header">Carne de res con cerdo</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
+    <section class="column-lg-4 colmn-md-6 colmn-sm-12">
+        <div>
+            <p class="subt2">Beef</p>
+            <p class="content">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+        </div>
     </section>
-    <section class="section">
-        <div class="section-header">Sushi de platano </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ligula sed dolor fermentum sollicitudin.</p>
-    </section>
+    <section class="column-lg-4 colmn-md-12 colmn-sm-12">
+        <div>
+            <p class="subt3">Sushi</p>
+            <p class="content">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+            </p>
+        </div>
 </body>
+
 </html>
