--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -95,7 +97,7 @@
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="text-center">&copy; Copyright David Chu's China Bistro 2024</div>
     </div>
   </footer>
 
